<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr - Minimal kinematics library</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>eigen_checks</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
